# study

semester_3/oop_labs/: .gitignore
semester_3/oop_labs/lab0_a/: CMakeLists.txt  main.cpp  module1.cpp  module1.h  module2.cpp  module2.h
semester_3/oop_labs/lab0_b/: CMakeLists.txt  CSV.cpp  CSV.h  input.txt  main.cpp  output.csv  tests.cpp
semester_3/oop_labs/lab1_a/: BitArray.cpp  BitArray.h  CMakeLists.txt  TestBItArray.cpp
semester_3/oop_labs/lab2_a/: CMakeLists.txt
semester_3/oop_labs/lab2_a/fields/: Blinker.txt  Glider.txt  Pulsar.txt  Spaceship.txt  Tumble.txt
semester_3/oop_labs/lab2_a/src/: FileWork.cpp  FileWork.h  GameController.cpp  GameController.h  Rule.cpp  Rule.h  Universe.cpp  Universe.h  main.cpp
semester_3/oop_labs/lab2_a/tests/: TestFileWork.cpp  TestGameController.cpp  TestRule.cpp  TestUniverse.cpp
semester_3/oop_labs/lab3/: CMakeLists.txt
semester_3/oop_labs/lab3/configs/: config.txt
semester_3/oop_labs/lab3/converters/: gain.cpp  gain.h  mix.cpp  mix.h  mute.cpp  mute.h
semester_3/oop_labs/lab3/src/: audio_stream.cpp  audio_stream.h  config_parser.cpp  config_parser.h  converter.h  converter_factory.h  main.cpp  pipeline.cpp  pipeline.h
semester_3/oop_labs/lab3/tests/: test_audio_stream.cpp  test_config_parser.cpp  test_converter_factory.cpp  test_gain.cpp  test_mix.cpp  test_mute.cpp  test_pipeline.cpp
semester_3/oop_labs/lab4/: csv_parser.h  lab4.cpp  lab4.sln  lab4.vcxproj  lab4.vcxproj.filters  test.csv
semester_4/oop_lab/: .gitignore
semester_4/opp_labs/: .gitignore
semester_4/opp_labs/dop_shtuki/: ref.docx
semester_4/opp_labs/lab1/: CMakeLists.txt  grafs.py  lab1.docx  run1.sh  Книга1.xlsx  амдал.txt
semester_4/opp_labs/lab1/src/: main.cpp  timed-type-1.cpp  type-1.cpp  type-2.cpp
semester_4/opp_labs/lab2/: CMakeLists.txt  lab2.docx  type-1.cpp  type-2.cpp  вопросы.txt
semester_4/opp_labs/lab2/tests/: run1_all_proc.sh.o7737313  run1_schedule.sh.o7737322  run2_all_proc.sh.o7737316  run2_schedule.sh.o7737321
semester_4/opp_labs/lab3/: CMakeLists.txt  lab3.docx  main.cpp  papapa  test.cpp
semester_4/opp_labs/lab3/grafs/: proc.py  proc_dop.py  size.py  size_dop.py
semester_4/osi/lab1-1/: .print.c.swp  print  print.i  print.s
semester_4/osi/lab1-2/: print.c
semester_4/osi/lab2-1/: .print2.c.swp  index.html  print  print1  print1.c  print2  print2.c  print3  print3.asm  trace.txt  допы.txt
semester_4/osi/lab3-1/: reverse  reverse.c  полезная инфа.txt
semester_4/osi/lab3-1/apapar/: abad  abal
semester_4/osi/lab3-1/rapapa/: daba  laba
semester_4/osi/lab3-2/: main.c  tools
semester_4/seti/lab1/: Vagrantfile
semester_4/seti/lab1/scripts/: bootstrap.sh
